tests/negative/typecheck/break.orng
// break.orng:6:10: error: `break` is not inside a loop
//     break
//         ^
// 
fn main() -> Int {
    break
}